--- a/gripper_board.ioc
+++ b/gripper_board.ioc
@@ -19,25 +19,43 @@ Mcu.Name=STM32F042C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB8
-Mcu.Pin15=PB9
-Mcu.Pin16=VP_ADC_TempSens_Input
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PB2
+Mcu.Pin13=PB10
+Mcu.Pin14=PB11
+Mcu.Pin15=PB12
+Mcu.Pin16=PB13
+Mcu.Pin17=PB15
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PA0
+Mcu.Pin20=PA10
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13
+Mcu.Pin24=PA14
+Mcu.Pin25=PA15
+Mcu.Pin26=PB3
+Mcu.Pin27=PB4
+Mcu.Pin28=PB5
+Mcu.Pin29=PB6
 Mcu.Pin3=PA1
+Mcu.Pin30=PB7
+Mcu.Pin31=PF11
+Mcu.Pin32=PB8
+Mcu.Pin33=PB9
+Mcu.Pin34=VP_ADC_TempSens_Input
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=20
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=38
 Mcu.UserConstants=
 Mcu.UserName=STM32F042C6Tx
 MxCube.Version=4.23.0
@@ -49,43 +67,108 @@ NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=VDD
+PA0.Locked=true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=_+5V
+PA1.Locked=true
 PA1.Mode=IN1
 PA1.Signal=ADC_IN1
+PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.Locked=true
 PA11.Mode=Master
 PA11.Signal=CAN_RX
+PA12.Locked=true
 PA12.Mode=Master
 PA12.Signal=CAN_TX
+PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
+PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=CAN_S
+PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=Current_1
+PA2.Locked=true
 PA2.Mode=IN2
 PA2.Signal=ADC_IN2
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=Current_2
+PA3.Locked=true
 PA3.Mode=IN3
 PA3.Signal=ADC_IN3
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=nFAULT_1
+PA4.Signal=GPIO_Input
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=nFAULT_2
+PA5.Signal=GPIO_Input
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=RREF_1
+PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RREF_2
+PA7.Locked=true
 PA7.Signal=S_TIM3_CH2
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=TRQ_2
+PA8.Signal=GPIO_Output
+PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=DIR_1
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=ENA_1
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=M1_0
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=nSLEEP_1
+PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=TRQ_1
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=DECAY_1
+PB13.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=DECAY_2
+PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=M1_1
+PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=nSLEEP_2
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=M0_2
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=M1_2
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=ENA_2
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=DIR_2
+PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=STEP_1
+PB8.Locked=true
 PB8.Signal=S_TIM16_CH1
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=STEP_2
+PB9.Locked=true
 PB9.Signal=S_TIM17_CH1
 PCC.Checker=false
 PCC.Line=STM32F0x2
@@ -95,10 +178,16 @@ PCC.Seq0=0
 PCC.Series=STM32F0
 PCC.Temperature=25
 PCC.Vdd=3.6
+PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
+PF1-OSC_OUT.Locked=true
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
 PF1-OSC_OUT.Signal=RCC_OSC_OUT
+PF11.GPIOParameters=GPIO_Label
+PF11.GPIO_Label=BOOT0
+PF11.Locked=true
+PF11.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 RCC.CECFreq_Value=32786.88524590164
 RCC.FamilyName=M
